[tool.poetry]
name = "jerry-s-game"
version = "0.1.0"
description = ""
authors = ["Toomas <toomas.taro@gmail.com>"]
readme = "README.md"
packages = [{include = "jerry_s_game"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
